--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         tools:targetApi="31">
         <activity
             android:name=".AddProduct"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".Product"
             android:exported="false">
